--- a/.github/workflows/distribute.yml
+++ b/.github/workflows/distribute.yml
@@ -20,8 +20,15 @@ jobs:
     strategy:
       matrix:
         kind: [mac, ios]
+        beta: ['true', 'false']
     steps:
       - uses: actions/checkout@v2
+
+      - name: Configure Beta Env Vars
+        if: ${{ matrix.beta == 'true' }}
+        run: |
+          echo "XCODE_BETA=true" >> $GITHUB_ENV
+          echo "DEVELOPER_DIR=/Applications/Xcode_13.app/Contents/Developer"  >> $GITHUB_ENV
 
       - name: Install Brews
         run: brew bundle
