--- a/.github/workflows/distribute.yml
+++ b/.github/workflows/distribute.yml
@@ -20,12 +20,12 @@ jobs:
     strategy:
       matrix:
         kind: [mac, ios]
-        beta: ['true', 'false']
+        beta: ['beta', 'not_beta']
     steps:
       - uses: actions/checkout@v2
 
       - name: Configure Beta Env Vars
-        if: ${{ matrix.beta == 'true' }}
+        if: ${{ matrix.beta == 'beta' }}
         run: |
           echo "XCODE_BETA=true" >> $GITHUB_ENV
           echo "DEVELOPER_DIR=/Applications/Xcode_13.app/Contents/Developer"  >> $GITHUB_ENV
