Just do beta for testing

--- a/.github/workflows/distribute.yml
+++ b/.github/workflows/distribute.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       matrix:
         kind: [mac, ios]
-        beta: ['beta', 'not_beta']
+        beta: ['beta'] #, 'not_beta']
     steps:
       - uses: actions/checkout@v2
 
